tests/negative/neg_pr113_duplicate_named_constraint.safe
package Neg_PR113_Duplicate_Named_Constraint
   type Packet (Kind : Character = 'A', Count : Integer = 0) is
      record
         Value : Integer;

   P : Packet (Kind = 'A', Kind = 'B') = (Value = 1);

